# easycopy

./: BUILD.md  Cargo.toml  README.md  run_checks.sh
docs/plans/: 2026-06-20-ai-chat-design.md  2026-06-20-ai-chat-plan.md
examples/: weather_smoke.rs
src/: browser_action.rs  clip_cache.rs  clipboard.rs  config.rs  desktop.rs  dirs.rs  history.rs  history_storage.rs  hotkey.rs  icon_resolver.rs  image_store.rs  ipc.rs  lib.rs  main.rs  opener.rs  parser.rs  popup.rs  storage.rs  theme.rs  x11_clipboard.rs
src/ai/: client.rs  mod.rs  session.rs  worker.rs
src/ai/tools/: weather.rs
src/browser/: action.rs  mod.rs
src/clipboard/: cache.rs  mod.rs  monitor.rs  x11.rs
src/config/: config.rs  dirs.rs  mod.rs
src/ipc/: mod.rs  socket.rs
src/launcher/: desktop.rs  icon.rs  mod.rs  parser.rs
src/store/: atomic.rs  browser_actions.rs  config.rs  desktop.rs  history.rs  images.rs  mod.rs  paths.rs
src/ui/: mod.rs  popup.rs  theme.rs
tests/: perf_tests.rs  test_ai_client.rs  test_ai_config.rs  test_ai_paths.rs  test_ai_session.rs  test_history.rs  test_ollama_stream.rs  test_storage.rs  test_weather_tool.rs
