[package]
name = "clipit-rs"
version = "0.2.0"
edition = "2021"
description = "Minimal clipboard history manager for Linux"
license = "MIT"
readme = "README.md"

[dependencies]
arboard = "3"
eframe = "0.28"
egui = "0.28"
global-hotkey = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
strip = true
