[package]
name = "easycopy"
version = "0.2.0"
edition = "2021"
description = "Minimal clipboard history manager for Linux"
license = "MIT"
readme = "README.md"
rust-version = "1.94"

[dependencies]
arboard = "3"
eframe = "0.28"
egui = "0.28"
winit = "0.29"
global-hotkey = "0.5"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = "0.4"
toml = "0.8"
x11rb = { version = "0.13.2", features = ["xfixes"] }
libc = "0.2.186"
adk-rust = { version = "1.0.0", features = ["openai", "anthropic", "ollama", "tools"] }
adk-session = { version = "1.0.0", default-features = false, features = ["sqlite"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
schemars = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
strip = true
